<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView5"
                style="@style/tituloCeldaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nombre_aparece_tarjeta"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/holder_name"
                style="@style/editTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/line_edit"
                android:hint="@string/holder_name"
                android:inputType="textPersonName|textCapWords"
                android:nextFocusDown="@id/card_number"
                android:paddingStart="16dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                style="@style/tituloCeldaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/card_number"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/holder_name" />

            <EditText
                android:id="@+id/card_number"
                style="@style/editTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_edit"
                android:hint="@string/card_num_example"
                android:inputType="number"
                android:maxLength="16"
                android:nextFocusDown="@id/cvv2"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


            <TextView
                android:id="@+id/textView10"
                style="@style/tituloCeldaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/codigo_seguridad"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number" />

            <EditText
                android:id="@+id/cvv2"
                style="@style/editTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_edit"
                android:hint="@string/cvv"
                android:inputType="number"
                android:maxLength="4"
                android:nextFocusDown="@id/year_spinner"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                style="@style/tituloCeldaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/fecha_expiracion"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvv2" />

            <TextView
                android:id="@+id/textView2"
                style="@style/titulosStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detalles_tarjeta"
                android:textColor="@color/colorGreenBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/year_spinner"
                style="@style/tituloCeldaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/spinner_bck"
                android:entries="@array/year_array"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView12" />

            <Spinner
                android:id="@+id/month_spinner"
                style="@style/tituloCeldaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="1"
                android:background="@drawable/spinner_bck"
                android:entries="@array/month_array"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year_spinner" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="true"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/month_spinner">

                <Button
                    android:id="@+id/button8"
                    style="@style/btnFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pading_s"
                    android:layout_marginEnd="@dimen/pading_m"
                    android:layout_marginBottom="@dimen/pading_m"
                    android:layout_weight="1"
                    android:background="@drawable/btn_purple"
                    android:onClick="cancelar"
                    android:text="@string/cancelar"
                    android:textColor="@color/colorWhite" />

                <Button
                    style="@style/btnFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pading_m"
                    android:layout_marginRight="@dimen/pading_s"
                    android:layout_marginBottom="@dimen/pading_m"
                    android:layout_weight="1"
                    android:background="@drawable/btn_green"
                    android:onClick="saveCard"
                    android:text="@string/realizar_pago"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>
        </LinearLayout>
